[package]
name = "elevator"
description = "run programs with elevated privileges on Windows"
version = "0.1.0"
edition = "2021"

license = "MIT"
readme = "README.md"
authors = ["Arteii <ben.arteii@proton.me>"]
build = "build.rs"

# TODO!:
categories = ["command-line-interface"]
repository = "https://github.com/Arteiii/elevator"
keywords = ["windows"]
homepage = "https://arteiii.github.io"


include = [
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE-MIT",
    "src/**/*",
    "bin/**/*",
    "build.rs",
    "manifest.xml",
]

[lib]
name = "elevator_lib"
path = "src/lib.rs"

[[bin]]
name = "elevator"
path = "bin/main.rs"

[dependencies]
winapi = { version = "0.3.9", features = ["shellapi", "winuser", "minwindef", "errhandlingapi", "winbase"] }

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
OriginalFilename = "elevator.exe"
LegalCopyright = "Copyright Arteii © 2024"
