[package]
name = "elevator"
description = "run programs with elevated privileges on Windows"
version = "1.0.1"
edition = "2021"

license = "MIT"
readme = "README.md"
authors = ["Arteii <ben.arteii@proton.me>"]
#build = "build.rs"

# TODO!:
categories = ["command-line-interface"]
repository = "https://github.com/Arteiii/elevator"
keywords = ["windows"]
homepage = "https://arteiii.github.io"


include = [
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE-MIT",
    "src/**/*",
    "bin/**/*",
    "build.rs",
    "manifest.xml",
]

[lib]
name = "elevator_lib"
path = "src/lib.rs"

[[bin]]
name = "elevator"
path = "bin/main.rs"

[dependencies]
libc = "0.2.154"

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
OriginalFilename = "elevator.exe"
LegalCopyright = "Copyright Arteii © 2024"

[dependencies.windows]
version = "0.56.0"
features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_Registry", "Win32_System_Com"]
